# parking_system_c-_hw

./: CMakeLists.txt  README.md
configs/: config.json  config_bot.json  users.json  vehicles.json
include/: auth.hpp  database.hpp  logger.hpp  utils.hpp  vehicle.hpp
src/: auth.cpp  bot.cpp  client.cpp  database.cpp  logger.cpp  main.cpp  utils.cpp  vehicle.cpp
